allMatch, anyMatch, and noneMatch